--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ matrix:
     - rvm: jruby
       env: JRUBY_OPTS="--1.9 --server -Xcext.enabled=true"
     - rvm: jruby-head
-      env: JRUBY_OPTS="--1.9 --server -Xcext.enabled=true"
+      env: JRUBY_OPTS="--server -Xcext.enabled=false -Xcompile.invokedynamic=false"
 notifications:
   email: false
