--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
+  - ruby-head
+gemfile:
+  - gemfiles/4.2.gemfile
+  - gemfiles/5.0.gemfile
+  - gemfiles/5.1.gemfile
+  - gemfiles/5.2.gemfile
+  - gemfiles/6.0.gemfile
 matrix:
+  exclude:
+    - rvm: 2.3
+      gemfile: gemfiles/6.0.gemfile
+    - rvm: 2.4
+      gemfile: gemfiles/6.0.gemfile
+  fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
   include:
     - rvm: jruby
       env: JRUBY_OPTS="--1.9 --server -Xcext.enabled=true"
