--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,17 @@ rvm:
   - 2.6
   - ruby-head
 gemfile:
-  - gemfiles/4.2.gemfile
-  - gemfiles/5.0.gemfile
-  - gemfiles/5.1.gemfile
-  - gemfiles/5.2.gemfile
-  - gemfiles/6.0.gemfile
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
+  - gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_5.2.gemfile
+  - gemfiles/rails_6.0.gemfile
 matrix:
   exclude:
     - rvm: 2.3
-      gemfile: gemfiles/6.0.gemfile
+      gemfile: gemfiles/rails_6.0.gemfile
     - rvm: 2.4
-      gemfile: gemfiles/6.0.gemfile
+      gemfile: gemfiles/rails_6.0.gemfile
   fast_finish: true
   allow_failures:
     - rvm: ruby-head
