--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ gemfile:
   - gemfiles/rails_5.0.gemfile
   - gemfiles/rails_5.1.gemfile
   - gemfiles/rails_5.2.gemfile
-  - gemfiles/rails_6.0.gemfile
+  - gemfiles/rails_6.0.0.rc1.gemfile
 matrix:
   exclude:
     - rvm: 2.3
-      gemfile: gemfiles/rails_6.0.gemfile
+      gemfile: gemfiles/rails_6.0.0.rc1.gemfile
     - rvm: 2.4
-      gemfile: gemfiles/rails_6.0.gemfile
+      gemfile: gemfiles/rails_6.0.0.rc1.gemfile
   fast_finish: true
   allow_failures:
     - rvm: ruby-head
