--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ matrix:
   fast_finish: true
   allow_failures:
     - rvm: ruby-head
-  include:
-    - rvm: jruby
-      env: JRUBY_OPTS="--1.9 --server -Xcext.enabled=true"
+# include:
+#   - rvm: jruby
+#     env: JRUBY_OPTS="--1.9 --server -Xcext.enabled=true"
 notifications:
   email: false
