--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ rvm:
   - 2.4
   - 2.5
   - 2.6
+  - 2.7
+  - 3.0
   - ruby-head
 gemfile:
   - gemfiles/rails_4.2.gemfile
@@ -21,6 +23,16 @@ matrix:
       gemfile: gemfiles/rails_6.0.gemfile
     - rvm: 2.4
       gemfile: gemfiles/rails_6.1.gemfile
+    - rvm: 2.7
+      gemfile: gemfiles/rails_4.2.gemfile
+    - rvm: 3.0
+      gemfile: gemfiles/rails_4.2.gemfile
+    - rvm: 3.0
+      gemfile: gemfiles/rails_5.0.gemfile
+    - rvm: 3.0
+      gemfile: gemfiles/rails_5.1.gemfile
+    - rvm: 3.0
+      gemfile: gemfiles/rails_5.2.gemfile
   fast_finish: true
   allow_failures:
     - rvm: ruby-head
