--- a/.github/workflows/active_model_otp.yml
+++ b/.github/workflows/active_model_otp.yml
@@ -9,17 +9,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        ruby-version: [2.3, 2.4, 2.5, 2.6, 2.7, 3.0]
 
     steps:
+      - name: Checkout source code
       - uses: actions/checkout@v2
 
-      - name: Set up Ruby
+      - name: Set up Ruby ${{ matrix.ruby-version }}
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6
+          ruby-version: ${{ matrix.ruby-version }}
 
       - name: Install dependencies
         run: bundle install
 
-      - name: Run tests
+      - name: Run tests with Ruby ${{ matrix.ruby-version }}
         run: bundle exec rake
