--- a/.github/workflows/active_model_otp.yml
+++ b/.github/workflows/active_model_otp.yml
@@ -2,9 +2,10 @@ name: Active Model OTP
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    types: [opened, synchronize, reopened, edited]
+    branches: [main]
 
 jobs:
   test:
