--- a/.github/workflows/active_model_otp.yml
+++ b/.github/workflows/active_model_otp.yml
@@ -7,16 +7,16 @@ on:
     types: [opened, synchronize, reopened, edited]
 
 jobs:
-  build-and-test:
+  ci:
     runs-on: ubuntu-latest
     
     strategy:
       matrix:
-        gemfile: [4.2, 5.0, 5.1, 5.2, 6.0, 6.1]
+        gemfile: [rails_4.2, rails_5.0, rails_5.1, rails_5.2, rails_6.0, rails_6.1]
         ruby-version: [2.3, 2.4, 2.5, 2.6, 2.7, 3.0]
     
     env:
-      BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.gemfile }}.gemfile
+      BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
     steps:
       - uses: actions/checkout@v2
