--- a/.github/workflows/active_model_otp.yml
+++ b/.github/workflows/active_model_otp.yml
@@ -46,6 +46,7 @@ jobs:
           - { gemfile: rails_6.1, ruby-version: 3.0 }
           - { gemfile: rails_6.1, ruby-version: 3.1 }
           - { gemfile: rails_6.1, ruby-version: 3.2 }
+          - { gemfile: rails_7.0, ruby-version: 2.3 }
           - { gemfile: rails_7.0, ruby-version: 2.4 }
           - { gemfile: rails_7.0, ruby-version: 2.5 }
           - { gemfile: rails_7.0, ruby-version: 2.6 }
