--- a/.github/workflows/active_model_otp.yml
+++ b/.github/workflows/active_model_otp.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         gemfile: [rails_5.2, rails_6.0, rails_6.1, rails_7.0]
-        ruby-version: [2.7, 3.0, 3.1, 3.2]
+        ruby-version: [2.6, 2.7, 3.0, 3.1, 3.2]
         exclude:
           - { gemfile: rails_5.2, ruby-version: 2.7 }
           - { gemfile: rails_5.2, ruby-version: 3.0 }
@@ -25,6 +25,7 @@ jobs:
           - { gemfile: rails_6.1, ruby-version: 3.0 }
           - { gemfile: rails_6.1, ruby-version: 3.1 }
           - { gemfile: rails_6.1, ruby-version: 3.2 }
+          - { gemfile: rails_7.0, ruby-version: 2.6 }
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
